# LC-Conductor

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
lc_conductor/: __init__.py  agents.py  backend_helper_function.py  backend_manager.py  callback_logger.py  endpoint_discovery.py  local_mcp_proxy.py  message_handler.py  resolve_default_parameters.py  session.py  tool_registration.py  tooling.py
lcc_ui_components/: package.json  tsconfig.json  vite.config.ts
lcc_ui_components/src/: AgentChat.tsx  AttachmentUpload.tsx  MarkdownText.tsx  ReasoningSidebar.tsx  RsaSettingsPanel.tsx  SettingsButton.tsx  agentSerialization.ts  api.ts  constants.ts  index.ts  lcc-ui-components.css  localMcp.ts  localMcpCustomBackup.ts  orchestratorSettings.ts  style.css  types.ts  websocketInit.ts
tests/: test_session.py
